--- a/pages/lk_reports/lk_reports_empty.html
+++ b/pages/lk_reports/lk_reports_empty.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../assets/styles/main.css">
     <link rel="stylesheet" href="../../assets/styles/normalize.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./style.css">
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 
@@ -54,62 +54,56 @@
             </div>
         </div>
     </header>
-    <main class="main motivation">
-        <div class="container">
-            <div class="motivation__banner universal__banner" onclick="togglePartnerPopup(true)">
-                <p class="title-md">Мотивация</p>
-                <p class="text-md">*Добавить текст описания*. Стать партнером</p>
-                <div class="universal__banner-bg"> <img src="../../assets/imgs/nc-people-holding-cards.png" alt="bg">
-                </div>
-            </div>
-            <div class="motivation__filter">
-                <button class="motivation__filter-button btn btn-secondary">
-                    <img src="../../assets/imgs/icons/ArrowsDownUp.svg" alt="">
-                    <p class="text-md motivation__filter-button-text">Сначала дешевые</p>
-                    <img src="../../assets/imgs/icons/CaretDown.svg" alt="">
 
-                </button>
-            </div>
-            <ul class="motivation__list">
-                <li class="motivation__list-item">
-                    <div class="motivation__list-item-img-container">
-                        <img src="../../assets/imgs/djinsovka.png" class="motivation__list-item-img" alt="">
-                    </div>
-                    <p class="motivation__list-item-title text-lg">Джинсовка</p>
-                    <button class="motivation__list-btn btn btn-secondary">
-                        <p class="text-md">100 баллов</p>
-                    </button>
+    <div class="container">
+        <div class="profile mt-sm">
+            <ul class="profile-left">
+                <li class="profile-left-item text-md ">Профиль
+                    <div class="profile-left-item-line"></div>
                 </li>
-                <li class="motivation__list-item">
-                    <div class="motivation__list-item-img-container">
-                        <img src="../../assets/imgs/djinsovka.png" class="motivation__list-item-img" alt="">
-                    </div>
-                    <p class="motivation__list-item-title text-lg">Джинсовка</p>
-                    <button class="motivation__list-btn btn btn-secondary">
-                        <p class="text-md">100 баллов</p>
-                    </button>
+                <li class="profile-left-item text-md">Мои мероприятия 
+                    <div class="profile-left-item-line"></div>
+                    <p class="profile-left-item-placeholder text-sl blue">21</p>
                 </li>
-                <li class="motivation__list-item">
-                    <div class="motivation__list-item-img-container">
-                        <img src="../../assets/imgs/djinsovka.png" class="motivation__list-item-img" alt="">
-                    </div>
-                    <p class="motivation__list-item-title text-lg">Джинсовка</p>
-                    <button class="motivation__list-btn btn btn-secondary">
-                        <p class="text-md">100 баллов</p>
-                    </button>
+                <li class="profile-left-item text-md">История мероприятий
+                    <div class="profile-left-item-line"></div>
                 </li>
-                <li class="motivation__list-item">
-                    <div class="motivation__list-item-img-container">
-                        <img src="../../assets/imgs/djinsovka.png" class="motivation__list-item-img" alt="">
-                    </div>
-                    <p class="motivation__list-item-title text-lg">Джинсовка</p>
-                    <button class="motivation__list-btn btn btn-secondary">
-                        <p class="text-md">100 баллов</p>
-                    </button>
+                <li class="profile-left-item text-md">Баллы и рейтинг
+                    <div class="profile-left-item-line"></div>
+                    <p class="profile-left-item-placeholder text-sl pink">0 Б</p>
+                </li>
+                <li class="profile-left-item text-md active">Отчёты
+                    <div class="profile-left-item-line"></div>
                 </li>
             </ul>
+            <div class="profile-right reports empty">
+                <div class="reports__empty-icon-container">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g id="ReadCvLogo">
+                        <path id="Vector" d="M19.7606 3.67896L7.54962 1.52271C7.1579 1.45377 6.75483 1.54324 6.42906 1.77144C6.10329 1.99964 5.88149 2.34788 5.81244 2.73958L3.02338 18.5833C2.98926 18.7774 2.99373 18.9763 3.03653 19.1687C3.07932 19.3611 3.15961 19.5431 3.27279 19.7045C3.38597 19.8658 3.52983 20.0032 3.69616 20.1089C3.86248 20.2146 4.048 20.2865 4.24213 20.3205L16.4531 22.4768C16.6472 22.511 16.8462 22.5066 17.0387 22.4639C17.2312 22.4212 17.4134 22.3409 17.5748 22.2277C17.7362 22.1145 17.8738 21.9706 17.9795 21.8042C18.0853 21.6378 18.1572 21.4522 18.1912 21.258L20.9802 5.41427C21.0486 5.02242 20.9585 4.61947 20.7297 4.29405C20.501 3.96863 20.1524 3.74738 19.7606 3.67896ZM16.7118 20.9993L4.49994 18.843L7.289 2.99927L19.4999 5.15552L16.7118 20.9993ZM8.37556 5.47614C8.4103 5.28037 8.52136 5.1064 8.68433 4.99248C8.8473 4.87856 9.04883 4.83402 9.24463 4.86864L17.0259 6.24208C17.2108 6.27448 17.3769 6.37505 17.4912 6.52394C17.6056 6.67283 17.66 6.8592 17.6436 7.04623C17.6272 7.23326 17.5413 7.40735 17.4028 7.5341C17.2643 7.66086 17.0833 7.73106 16.8956 7.73083C16.8516 7.73077 16.8077 7.72701 16.7643 7.71958L8.98306 6.34521C8.78729 6.31046 8.61332 6.1994 8.4994 6.03644C8.38548 5.87347 8.34094 5.67194 8.37556 5.47614ZM7.85619 8.43114C7.87328 8.33412 7.90932 8.24141 7.96225 8.15832C8.01518 8.07523 8.08397 8.00338 8.16467 7.94688C8.24538 7.89038 8.33642 7.85033 8.43261 7.82903C8.52879 7.80772 8.62823 7.80557 8.72525 7.8227L16.5065 9.19708C16.6927 9.22823 16.8604 9.32847 16.9759 9.4778C17.0915 9.62712 17.1465 9.81454 17.1299 10.0026C17.1133 10.1907 17.0264 10.3656 16.8865 10.4925C16.7466 10.6193 16.5641 10.6887 16.3752 10.6868C16.3309 10.6869 16.2866 10.6828 16.2431 10.6746L8.46181 9.30114C8.26619 9.26598 8.09252 9.1546 7.97897 8.99147C7.86541 8.82834 7.82125 8.62681 7.85619 8.43114ZM7.33588 11.3852C7.37127 11.1899 7.4826 11.0167 7.64549 10.9033C7.80838 10.79 8.00955 10.7458 8.20494 10.7805L12.0937 11.464C12.2785 11.4963 12.4445 11.5968 12.5589 11.7456C12.6733 11.8944 12.7277 12.0807 12.7115 12.2676C12.6952 12.4546 12.6095 12.6287 12.4711 12.7555C12.3328 12.8823 12.152 12.9527 11.9643 12.9527C11.9203 12.9527 11.8764 12.9489 11.8331 12.9415L7.94244 12.2543C7.74683 12.2193 7.5731 12.1082 7.45937 11.9452C7.34565 11.7823 7.30123 11.5809 7.33588 11.3852Z" fill="#606C7D"/>
+                        </g>
+                    </svg>
+                </div>
+               
+              <p class="title-sm dark">Отчёты</p>
+              <p class="text-sm gray">Пока Вы не завершили ни одного мероприятия.</p>
+            </div>
         </div>
-    </main>
+    </div>
+
+
+    <script>
+       function copyToClipBoard(element) {
+            const textArea = document.createElement("textarea");
+            textArea.value = element.innerText;
+            document.body.appendChild(textArea);
+            textArea.select();
+            document.execCommand("copy");
+            document.body.removeChild(textArea);
+        }
+    </script>
+
+
     <div id="footer" class="mt-2xl">
         <div class="container">
             <div class="footer-wrapper ">
@@ -206,82 +200,8 @@
             <a class="text-md" href="#">Рейтинг волонтёров</a>
         </div>
     </div>
-    <!-- motivation-popup_active -->
-    <div class="motivation__popup-1 motivation-popup motivation-popup_active some-popup_not-full">
-        <div class="motivation-popup__background" onclick="togglePartnerPopup(false)"></div>
-        <div class="motivation-popup__wrapper motivation-popup__wrapper_1 first-popup">
-            <div class="first-popup__img-container">
-                <img src="../../assets//imgs/djinsovka.png" alt="">
-            </div>
-            <div class="first-popup__info-wrapper">
-                <div class="first-popup__info">
-                    <p class="first-popup__info-title title-sm">Джинсовка</p>
-                    <div class="first-popup__info-price">
-                        <p class="first-popup__info-price-name text-sm">Стоимость</p>
-                        <p class="first-popup__info-price-count text-md">100 Б</p>
-                    </div>
-                    <div class="first-popup__info-balance">
-                        <div class="first-popup__info-balance-current">
-                            <p class="first-popup__info-balance-current-name text-sm">Текущий баланс</p>
-                            <p class="first-popup__info-balance-current-count_pink text-md">258 баллов</p>
-                        </div>
-                        <div class="first-popup__info-balance-will">
-                            <img src="../../assets/imgs/ArrowRight.svg" alt="">
-                            <p class="first-popup__info-balance-will-name text-sm">Останется баллов</p>
-                            <p class="first-popup__info-balance-will-count_pink text-md">258 баллов</p>
-                        </div>
-                    </div>
-                    <div class="first-popup__info-balance-only-current">
-                        <div class="first-popup__info-balance-current">
-                            <p class="first-popup__info-balance-current-name text-sm">Текущий баланс</p>
-                            <p class="first-popup__info-balance-current-count_pink text-md">258 баллов</p>
-                        </div>
-                    </div>
-                </div>
-                <button class="btn btn-primary first-popup__info-btn text-md">Оформить заявку - 100 баллов</button>
-                <button class="btn btn-secondary first-popup__close-btn text-md">Закрыть</button>
-
-            </div>
-
-        </div>
-        <div class="motivation-popup__wrapper motivation-popup__wrapper_2 second-popup">
-            <img src="../../assets/imgs/icons/CheckCircle.svg" alt="">
-            <p class="second-popup__title title-sm">Успешное оформление заявки</p>
-            <p class="second-popup__desc text-md">
-                Для уточнение деталей заказа, *менеджер* свяжется с вами по <span>testmail@gmail.com</span>
-            </p>
-            <div class="second-popup__products">
-                <div class="second-popup__products-img-container">
-                    <img src="../../assets/imgs/djinsovka.png" alt="" class="second-popup__products-img">
-                </div>
-                <div class="second-popup__prodcuts-text">
-                    <p class="second-popup__products-name text-sm">Шоппер</p>
-                    <p class="second-popup__products-count text-md">100 баллов</p>
-                </div>
-            </div>
-            <button class="btn btn-primary text-md second-popup__btn">Отлично</button>
-        </div>
-        <div class="motivation-popup__wrapper motivation-popup__wrapper_3 third-popup">
-            <p class="third-popup__title title-sm">Выдача подарков происходит в последнюю неделю квартала</p>
-            <div class="third-popup__address">
-                <p class="third-popup__address-label text-sm">Адрес</p>
-                <p class="third-popup__address-name text-md">г. Уфа, Молодежное пространство «Йэшлек.House»</p>
-            </div>
-            <div class="third-popup__phone">
-                <p class="third-popup__phone-label text-sm">Телефон</p>
-                <p class="third-popup__phone-name text-md">+ 7 (347) 251-89-76</p>
-            </div>
-            <div class="third-popup__email">
-                <p class="third-popup__email-label text-sm">E-mail</p>
-                <p class="third-popup__email-name text-md">vz.rb@yandex.ru</p>
-            </div>
-        </div>
-        <button class="motivation-popup__close-btn">
-            <img src="../../assets/imgs/icons/close-icon.svg" alt="">
-        </button>
-    </div>
-    <script src="../main_page/main_page.js"></script>
-    <script src="./script.js"></script>
+    <script src="./main_page.js"></script>
+    <script src="../about_us/about_us.js"></script>
 </body>
 
 </html>
