task/BASH-22: Добавить анимацию элементу информации О нас

--- a/pages/main_page/main_page.html
+++ b/pages/main_page/main_page.html
@@ -572,9 +572,9 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="">
         <main class="about-us">
-            <div class="about-us__about-block">
+            <div class="about-us__about-block container">
                 <div class="about-us__about-info">
                     <p class="text-lg">О нас</p>
                     <p class="title-lg">Наше сообщество<span class="vasek vasek-volonteer">волонтеров</span><span
@@ -642,13 +642,25 @@
                         <span class="running-line__list-item_red">653+</span>зарегистрированных мероприятия
                     </li>
                     <li class="running-line__list-item title-lg">
+                        <span class="running-line__list-item_green">345+</span>зарегистрированных организаций
+                    </li>
+                    <li class="running-line__list-item title-lg">
                         <span class="running-line__list-item_red">653+</span>зарегистрированных мероприятия
+                    </li>
+                    <li class="running-line__list-item title-lg">
+                        <span class="running-line__list-item_green">345+</span>зарегистрированных организаций
+                    </li>
+                    <li class="running-line__list-item title-lg">
+                        <span class="running-line__list-item_red">653+</span>зарегистрированных мероприятия
+                    </li>
+                    <li class="running-line__list-item title-lg">
+                        <span class="running-line__list-item_green">345+</span>зарегистрированных организаций
                     </li>
                     <li class="running-line__list-item title-lg">
                         <span class="running-line__list-item_red">653+</span>зарегистрированных мероприятия
                     </li>
                 </ul>
-                <ul class="running-line__list">
+                <ul class="running-line__list running-line__list-revert">
                     <li class="running-line__list-item title-lg">
                         <span class="running-line__list-item_green">65 502+</span>часов работы волонтёров
                     </li>
@@ -666,7 +678,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="interaction-map">
+            <div class="interaction-map container">
                 <div class="interaction-map__text-info_mobile">
                     <p class="interaction-map__text-info-title title-md"><span
                             class="vasek">Волонтёрские</span>штабы　Республики
